--- a/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
@@ -13,7 +13,7 @@
                   <div class="form-group">
                       <input value="myFace" placeholder="<%- lang['Face Name'] %>" class="form-control form-control-lg" name="faceName" id="faceNameField">
                   </div>
-                  <input type="file" id="fileinput" name="files" />
+                  <input type="file" id="fileinput" name="files" multiple="multiple" />
               </form>
               <div class="col-8" id="faceManagerImages">
 
