Face Manager : prettier UI
- Access the Face Manager in the Super User panel

--- a/plugins/face/faceManagerCustomAutoLoadLibrary/web/libs/css/super.faceManager.css
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/web/libs/css/super.faceManager.css
@@ -1,7 +1,7 @@
 #faceManagerImages .face-image {
     transition: 0s;
 }
-#faceManagerImages h3:first-child {
+#faceManagerImages .face-title:first-child {
     margin-top: 0!important;
 }
 #faceManagerImages > .row {
@@ -44,4 +44,46 @@
 #faceManagerImages .face-image:hover .controls .badge,
 #faceManagerImages .face-image:hover .controls-bottom .badge{
     opacity: 0.1
+}
+/* ===================== FILE INPUT ===================== */
+.file-area {
+	 width: 100%;
+	 position: relative;
+}
+ .file-area input[type=file] {
+	 position: absolute;
+	 width: 100%;
+	 height: 100%;
+	 top: 0;
+	 left: 0;
+	 right: 0;
+	 bottom: 0;
+	 opacity: 0;
+	 cursor: pointer;
+}
+ .file-area .file-dummy {
+	 width: 100%;
+	 padding: 30px;
+	 background: rgba(255, 255, 255, 0.2);
+	 border: 2px dashed rgba(200, 200, 200, 0.2);
+	 text-align: center;
+	 transition: background 0.3s ease-in-out;
+     border-radius: 5px;
+     background-color: #f2f9ff;
+}
+ .file-area .file-dummy .success {
+	 display: none;
+}
+ .file-area input[type=file]:focus + .file-dummy {
+	 outline: 0;
+ }
+ .file-area input[type=file]:valid + .file-dummy {
+	 border-color: rgba(0, 255, 0, 0.4);
+	 background-color: rgba(0, 255, 0, 0.2);
+}
+ .file-area input[type=file]:valid + .file-dummy .success {
+	 display: inline-block;
+}
+ .file-area input[type=file]:valid + .file-dummy .default {
+	 display: none;
 }
