--- a/web/libs/css/dash2.sidemenu.css
+++ b/web/libs/css/dash2.sidemenu.css
@@ -5,15 +5,15 @@
     padding: 0;
 }
 
-.side-menu .monitor_block{padding:0;position:relative}
-.side-menu .monitor_block img{width:100%;height:75px;cursor:pointer;border: 0.5px inset #263238;}
+.side-menu .monitor_block{padding:2px;position:relative}
+.side-menu .monitor_block img{width:100%;height:75px;cursor:pointer;border: 0.5px solid #003d71;border-radius:4px;}
 @media screen and (max-width:1025px){
 .side-menu .monitor_block img{height:175px;}
 }
 .side-menu .monitor_block:hover .icons{opacity:1}
 .side-menu .monitor_block:hover .title{opacity:1}
-.side-menu .monitor_block .icons,.side-menu .monitor_block .title{opacity:0;width:100%;bottom:0;left:0;background:rgba(0,0,0,0.6);position:absolute;padding:2.5px;z-index:11;cursor:move}
-.side-menu .monitor_block .title{bottom:auto;top:0;color:#fff}
+.side-menu .monitor_block .icons,.side-menu .monitor_block .title{opacity:0;width:calc(100% - 4px);bottom:2px;left:2px;background:rgba(0,0,0,0.6);position:absolute;padding:2.5px;z-index:11;cursor:move;border-radius:4px}
+.side-menu .monitor_block .title{bottom:auto;top:2px;color:#fff}
 .nav-xs.side-menu .monitor_block{width:100%}
 .side-menu .monitor_block .list-data{display:none}
 .output_data:empty{display:none}
