--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -172,7 +172,7 @@
             <div class="form-group col-md-12">
                 <input class="form-control dark" placeholder="<%- lang.Search %> <%- lang.Monitors %>" id="monitors_list_search">
             </div>
-            <div id="monitors_list" class="display-table"></div>
+            <div id="monitors_list" style="height:100%" class="display-table"></div>
             <div class="mdl-layout-spacer"></div>
         </nav>
       </div>
