--- a/web/pages/blocks/timelapse.ejs
+++ b/web/pages/blocks/timelapse.ejs
@@ -9,49 +9,16 @@
             <h4 class="modal-title" id="timelapsejpegLabel"><i class="fa fa-angle-double-right"></i> &nbsp; <span><%-lang['Timelapse']%></span></h4>
         </div>
         <div class="modal-body text-center">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="fieldHolder text-left">
-                        <div class="form-group text-center">
-                            <%
-                                var logoImageLink
-                                if(config.logoLocation76x76.indexOf('//') === -1){
-                                    logoImageLink = window.libURL + config.logoLocation76x76
-                                }else{
-                                    logoImageLink = config.logoLocation76x76
-                                }
-                            %>
-                            <img src="<%- logoImageLink %>" style="<%- config.logoLocation76x76Style %>">
-                        </div>
-                        <div class="form-group">
-                          <label><div><span><%-lang['Monitor']%></span></div>
-                              <div><select class="form-control dark monitors_list"></select></div>
-                          </label>
-                        </div>
-                        <div class="form-group">
-                            <label><div><span><%-lang['Date']%></span></div>
-                                <div><input type="text" id="timelapsejpeg_date" class="form-control" value="" /></div>
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <input id="timelapseJpegFps" data-slider-id='timelapseJpegFps' type="text"
-                             data-slider-min="1" data-slider-max="30" data-slider-step="1" data-slider-value="30" value="30"/>
-                        </div>
-                        <div class="form-group">
-                            <!-- <div class="btn-group"> -->
-                                <!-- <a class="btn btn-primary download_mp4"><%-lang['Build']%></a> -->
-                                <a class="btn btn-danger btn-block download_mp4"><%-lang['Download']%></a>
-                            <!-- </div> -->
-                        </div>
-                    </div>
+            <div class="row grid-stack">
+                <!-- <div class="col-md-4">
+
                     <div class="">
                     </div>
-                    <div class="frameIcons row scroll-style-6"></div>
                 </div>
                 <div class="col-md-8 frameStripContainer contained">
                     <div class="playBackView"><img></div>
                     <div class="liveStreamView"></div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="modal-footer">
