better timelapse playback, fix layout

--- a/web/pages/blocks/timelapse.ejs
+++ b/web/pages/blocks/timelapse.ejs
@@ -49,8 +49,8 @@
                     <div class="frameIcons row scroll-style-6"></div>
                 </div>
                 <div class="col-md-8 frameStripContainer contained">
-                    <div class="playBackView"><img></div>
-                    <div class="liveStreamView"></div>
+                    <div class="playBackView" style="height:100%"><img></div>
+                    <!-- <div class="liveStreamView"></div> -->
                 </div>
             </div>
         </div>
