--- a/web/libs/css/dash2.forms.css
+++ b/web/libs/css/dash2.forms.css
@@ -30,8 +30,8 @@ form.modal-body{margin:0}
 .form-group-group.red > h4{background:#d9534f;color:#fff}
 .form-group-group.purple{border-color:#3f51b5}
 .form-group-group.purple > h4{background:#3f51b5;color:#fff}
-.form-group-group.blue{border-color:#337ab7}
-.form-group-group.blue > h4{background:#337ab7;color:#fff}
+.form-group-group.blue{border-color:#375182}
+.form-group-group.blue > h4{background:#375182;color:#fff}
 .form-group-group.navy{border-color:#31708f}
 .form-group-group.navy > h4{background:#31708f;color:#fff}
 .form-group-group.green{border-color:#449d44}
