--- a/web/pages/blocks/timelapse.ejs
+++ b/web/pages/blocks/timelapse.ejs
@@ -11,18 +11,8 @@
         <div class="modal-body text-center">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="fieldHolder text-left">
-                        <div class="form-group text-center">
-                            <%
-                                var logoImageLink
-                                if(config.logoLocation76x76.indexOf('//') === -1){
-                                    logoImageLink = window.libURL + config.logoLocation76x76
-                                }else{
-                                    logoImageLink = config.logoLocation76x76
-                                }
-                            %>
-                            <img src="<%- logoImageLink %>" style="<%- config.logoLocation76x76Style %>">
-                        </div>
+                    <div class="fieldHolder form-group-group grey text-left">
+                        <h4><%- lang['Search Settings'] %></h4>
                         <div class="form-group">
                           <label><div><span><%-lang['Monitor']%></span></div>
                               <div><select class="form-control dark monitors_list"></select></div>
@@ -35,16 +25,12 @@
                         </div>
                         <div class="form-group">
                             <input id="timelapseJpegFps" data-slider-id='timelapseJpegFps' type="text"
-                             data-slider-min="1" data-slider-max="30" data-slider-step="1" data-slider-value="30" value="30"/>
+                             data-slider-min="1" data-slider-max="30" data-slider-step="1" data-slider-value="15" value="15"/>
                         </div>
-                        <div class="form-group">
-                            <!-- <div class="btn-group"> -->
-                                <!-- <a class="btn btn-primary download_mp4"><%-lang['Build']%></a> -->
-                                <a class="btn btn-danger btn-block download_mp4"><%-lang['Download']%></a>
-                            <!-- </div> -->
+                        <div class="btn-group btn-group-justified">
+                                <a class="btn btn-primary playPause playPauseText"><%-lang['Play']%></a>
+                                <a class="btn btn-danger download_mp4"><%-lang['Download']%></a>
                         </div>
-                    </div>
-                    <div class="">
                     </div>
                     <div class="frameIcons row scroll-style-6"></div>
                 </div>
