--- a/web/libs/css/dash2.timelapse.jpeg.css
+++ b/web/libs/css/dash2.timelapse.jpeg.css
@@ -58,6 +58,7 @@
 }
 #timelapsejpeg .playBackView img{
     height:100%;
+    border-radius: 4px;
 }
 #timelapsejpeg .liveStreamView{
     position:absolute;
