--- a/web/pages/blocks/shinobiHub.ejs
+++ b/web/pages/blocks/shinobiHub.ejs
@@ -30,7 +30,7 @@
           <div style="display:inline-block;vertical-align:top">
               <select id="shinobihub-explore" class="form-control form-control-sm mr-2" style="vertical-align:top;display:inline-block;width:150px;margin-right:2rem">
                   <option value="0" selected>Uploaded Only</option>
-                  <option value="1">All on ShinobiHub</option>
+                  <option value="1">Public on ShinobiHub</option>
               </select>
               <select id="shinobihub-sort-by" class="form-control form-control-sm mr-2" style="vertical-align:top;display:inline-block;width:150px;margin-right:2rem">
                   <option value="dateUpdated" selected>Date Updated</option>
