--- a/web/pages/blocks/topLeftMenu.ejs
+++ b/web/pages/blocks/topLeftMenu.ejs
@@ -23,6 +23,7 @@
       <li class="mdl-menu__item" system="switch" switch="monitorMuteAudio" type="text"><div><i class="fa fa-volume-down"></i><div><%- lang['Mute Audio'] %></div></div></li>
       <li class="mdl-menu__item" system="switch" switch="monitorOrder" type="text"><div><i class="fa fa-sort"></i><div><%- lang['Order Streams'] %></div></div></li>
       <li class="mdl-menu__item" system="switch" switch="notifyHide" type="text"><div><i class="fa fa-exclamation-circle"></i><div><%- lang['Hide Notes'] %></div></div></li>
+      <li class="mdl-menu__item" data-toggle="modal" data-target="#help_window"><div><i class="fa fa-info-circle"></i><div><%- lang.Help %></div></div></li>
       <li class="mdl-menu__item logout"><div><i class="fa fa-sign-out"></i><div><%- lang.Logout %></div></div></li>
   </ul>
   <div class="mdl-layout-spacer"></div>
