--- a/web/pages/blocks/help.ejs
+++ b/web/pages/blocks/help.ejs
@@ -199,7 +199,7 @@
                                   icon: 'paypal',
                                   color: 'default',
                                   text: 'Donate by PayPal',
-                                  href: 'https://licenses.shinobi.video/subscribe?planSubscribe=plan_G31AZ9mknNCa6z',
+                                  href: 'https://www.paypal.me/ShinobiCCTV',
                                   class: ''
                               },
                           ]
