--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -160,6 +160,7 @@
 <% include blocks/settings.ejs %>
 <% include blocks/filters.ejs %>
 <% include blocks/timelapse.ejs %>
+<% include blocks/eventCounts.ejs %>
 <% include blocks/videoview.ejs %>
 <% include blocks/monitoredit.ejs %>
 <% include blocks/probe.ejs %>
