--- a/web/pages/blocks/eventCounts.ejs
+++ b/web/pages/blocks/eventCounts.ejs
@@ -6,7 +6,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title" id="eventCountsLabel"><i class="fa fa-angle-double-right"></i> &nbsp; <span><%-lang['Timelapse']%></span></h4>
+            <h4 class="modal-title" id="eventCountsLabel"><i class="fa fa-eye"></i> &nbsp; <span><%-lang['Event Counts']%></span></h4>
         </div>
         <div class="modal-body text-center">
             <div class="row">
