--- a/web/libs/css/dash2.monitoredit.css
+++ b/web/libs/css/dash2.monitoredit.css
@@ -1,13 +1,22 @@
+#add_monitor .form-group-group > h4{
+    cursor: pointer;
+    color: #fff;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3pt;
+    font-size: 8pt;
+}
+#add_monitor .form-group-group > h4 small{
+    cursor: pointer;
+    font-size: 8pt;
+}
 #add_monitor .hide-box-wrapper.form-group-group > h4{
     margin: 0;
-    transition: 0;
 }
 #add_monitor .hide-box-wrapper.form-group-group{
     padding: 0;
-    transition: 0;
 }
 #add_monitor .hide-box-wrapper .box-wrapper{
     height: 0;
     overflow: hidden;
-    transition: 0;
 }
