--- a/web/libs/css/dash2.forms.css
+++ b/web/libs/css/dash2.forms.css
@@ -23,7 +23,15 @@ form.modal-body{margin:0}
 .dark .form-group-group .mdl-list__item{color:#fff;border-bottom:1px solid #444;}
 .dark .form-group-group .mdl-list__item:hover{background:#555;}
 .form-group-group:visible:last-child,.form-group-group > .form-group:last-child{margin-bottom:0}
-.form-group-group > h4{margin:0 -10px 15px -10px;padding:15px;background:#ddd;}
+.form-group-group > h4{
+    margin:0 -10px 15px -10px;
+    padding:15px;
+    background:#ddd;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3pt;
+    font-size: 8pt;
+}
 .form-group-group > h4:empty{padding:2px}
 .form-group-group > h4 small{color:#fff;}
 .form-group-group.red{border-color:#d9534f}
