--- a/web/libs/themes/Ice/style.css
+++ b/web/libs/themes/Ice/style.css
@@ -20,3 +20,9 @@
 .btn-success {background: #27b392!important;border-color:#27b392!important;}
 .btn-danger {background: #bf7573!important;border-color:#bf7573!important;}
 .btn-warning {background: #b3a228!important;border-color:#b3a228!important;}
+::-webkit-scrollbar-thumb:hover {
+    background-color:#1f80f9;
+}
+::-webkit-scrollbar-thumb {
+    background-color:#1f80f9;
+}
