--- a/web/pages/blocks/monitoredit.ejs
+++ b/web/pages/blocks/monitoredit.ejs
@@ -256,7 +256,7 @@
             </ul>
             <div class="h_det_input h_det_1" style="display:inline-block">
                 <button type="button" class="btn btn-primary" monitor="region"><i class="fa fa-grav"></i> <%-lang['Region Editor']%></button>
-                <button type="button" class="btn btn-primary" monitor="detector_filters"><i class="fa fa-grav"></i> <%-lang['Detector Filters']%></button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#detector_filter"><i class="fa fa-grav"></i> <%-lang['Detector Filters']%></button>
               </div>
           </div>
           <div style="display:inline-block;margin-right:5px">
