Fix buttons visibility in super panel when window is too small

--- a/web/libs/css/dash2.forms.css
+++ b/web/libs/css/dash2.forms.css
@@ -52,3 +52,6 @@ form.modal-body{margin:0}
 .form-group-group.grey > h4{background:#777;color:#fff}
 .dark .form-group-group{background:#222}
 .form-group-group:last-child {margin-bottom: 0}
+
+.btn-group-justified {display: flex}
+.btn-group-justified .btn {flex: 1}
