--- a/web/pages/blocks/changeSuperPreferences.ejs
+++ b/web/pages/blocks/changeSuperPreferences.ejs
@@ -1,17 +1,5 @@
 <form>
-    <nav class="navbar navbar-rounded navbar-expand-lg bg-primary">
-        <div class="container">
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link submit">
-                            <p><i class="fa fa-check"></i> <%-lang.Save%></p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div class="mb-4"><a href="#" class="submit btn btn-block btn-default"><i class="fa fa-check"></i> <%- lang.Save %></a></div>
     <div class="form-group">
         <label>
             <div><span><%-lang.Email%></span></div>
