--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -92,19 +92,7 @@
                                 <!-- Tab panes -->
                                 <div class="tab-content text-center">
                                     <div class="tab-pane active" id="accounts" role="tabpanel">
-                                        <nav class="navbar navbar-rounded navbar-expand-lg bg-primary">
-                                            <div class="container">
-                                                <div class="collapse navbar-collapse">
-                                                    <ul class="navbar-nav">
-                                                        <li class="nav-item">
-                                                            <a class="nav-link add">
-                                                                <p><i class="fa fa-plus-square-o"></i> <%-lang['Add']%> <%-lang['Accounts']%></p>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </nav>
+                                        <div class="mb-4"><a href="#" class="add btn btn-block btn-default"><i class="fa fa-plus"></i> <%- lang.Add %></a></div>
                                         <table class="table table-striped"></table>
                                     </div>
                                     <div class="tab-pane text-left" id="config" role="tabpanel">
@@ -234,7 +222,7 @@ $.ccio.tm=function(x,d,z,k){
         case 0://account row
             d.detailsJSON=JSON.parse(d.details);
             $.ccio.accounts[d.ke]=d;
-            tmp+='<tr ke="'+d.ke+'"><td><b class="mail">'+d.mail+'</b></td><td>'+d.ke+'</td><td><a tabindex="1" class="permission btn btn-xs btn-primary"><i class="fa fa-lock"></i></a></td><td><a tabindex="1" class="delete btn btn-xs btn-danger"><i class="fa fa-trash-o"></i></a></td></tr>';
+            tmp+='<tr ke="'+d.ke+'"><td><b class="mail epic-text">'+d.mail+'</b></td><td>'+d.ke+'</td><td><a tabindex="1" class="permission btn btn-sm btn-info"><i class="fa fa-lock"></i></a></td><td><a tabindex="1" class="delete btn btn-sm btn-danger"><i class="fa fa-trash-o"></i></a></td></tr>';
         break;
         case 4://log row, draw to global and monitor
             if(!d.time){d.time=$.ccio.init('t')}
