--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/vbox.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/daterangepicker.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/circles.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/fullcalendar.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack-extra.min.css">
