Add Deep Forest and Night Garden themes, reskin login screen to Deep Forest

--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -13,12 +13,25 @@
 }
 .panel {
     border-color: #28b391!important;
+    background: #044032!important;
+}
+.panel-heading {
+    background: #124438!important;
+    border-color: #163537!important;
 }
 .mdl-switch.is-checked .mdl-switch__thumb {
     background: #28b391!important;
 }
 .mdl-switch.is-checked .mdl-switch__track {
     background: rgba(63, 181, 99, 0.5)!important;
+}
+.shinobi-bg {
+    background: #33686d;
+}
+.form-control {
+    background: #163537;
+    border-color: #1d4c40!important;
+    color: #979797;
 }
 </style>
 <% if(screen){screen=screen.toLowerCase()} %>
