--- a/web/pages/blocks/detectorfilters.ejs
+++ b/web/pages/blocks/detectorfilters.ejs
@@ -12,10 +12,7 @@
       </div>
       <div class="modal-body">
           <div class="form-group-group green">
-              <h4><%- lang['Saved Filters'] %> : <small class="filter_name"></small>
-                  <div class="pull-right">
-                  </div>
-              </h4>
+              <h4><%- lang['Saved Filters'] %></h4>
                 <div class="form-group">
                     <label>
                         <div><span><%-lang.Filters%></span></div>
