--- a/web/pages/blocks/region.ejs
+++ b/web/pages/blocks/region.ejs
@@ -32,13 +32,13 @@
                 </div>
                 <div class="form-group">
                     <label>
-                        <div><span><%-lang['Indifference']%></span></div>
+                        <div><span><%-lang['Minimum Change']%></span></div>
                         <div><input class="form-control" name="sensitivity"></div>
                     </label>
                 </div>
                 <div class="form-group">
                     <label>
-                        <div><span><%-lang['Max Indifference']%></span></div>
+                        <div><span><%-lang['Max Change']%></span></div>
                         <div><input class="form-control" name="max_sensitivity"></div>
                     </label>
                 </div>
