--- a/web/pages/blocks/region.ejs
+++ b/web/pages/blocks/region.ejs
@@ -12,7 +12,7 @@
       <div class="row">
           <div class="col-md-6 text-left">
               <div class="form-group-group orange where">
-                  <h4><span class="cord_name"></span>
+                  <h4><span class="cord_name">&nbsp;</span>
                     <div class="pull-right">
                         <a class="btn btn-success btn-xs add">&nbsp;<i class="fa fa-plus"></i>&nbsp;</a>
                         <a class="btn btn-danger btn-xs erase">&nbsp;<i class="fa fa-trash-o"></i>&nbsp;</a>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <label>
-                        <div><span><%-lang['Max Change']%></span></div>
+                        <div><span><%-lang['Maximum Change']%></span></div>
                         <div><input class="form-control" name="max_sensitivity"></div>
                     </label>
                 </div>
