--- a/web/pages/blocks/probe.ejs
+++ b/web/pages/blocks/probe.ejs
@@ -30,6 +30,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><i class="fa fa-times"></i> <%-lang.Close%></button>
+        <button type="button" class="btn btn-primary fill"><%-lang.Import%></button>
         <a class="btn btn-danger stop" style="display:none"><%-lang.Stop%><span> &nbsp; <i class="fa fa-pulse fa-spinner"></i></span></a>
         <button type="submit" class="btn btn-success"><%-lang.Check%></button>
       </div>
