Refactor ONVIF Scanner (front-end)

--- a/web/pages/blocks/probe.ejs
+++ b/web/pages/blocks/probe.ejs
@@ -65,15 +65,12 @@
                         <div><input class="form-control" type="password" name="pass"></div>
                     </label>
                   </div>
-                  <div class="form-group text-right">
-                      <button type="submit" class="btn btn-success"><%-lang.Search%><span class="_loading" style="display:none"> &nbsp; <i class="fa fa-pulse fa-spinner"></i></span></button>
-                  </div>
+                  <button type="submit" class="btn btn-block btn-success"><%-lang.Search%><span class="_loading" style="display:none"> &nbsp; <i class="fa fa-pulse fa-spinner"></i></span></button>
               </div>
           </div>
           <div class="col-md-6">
-              <div class="form-group-group blue">
-                  <h4><%-lang['Found Devices']%></h4>
-<!--                  <div id="onvif_video"></div>-->
+              <div class="form-group-group blue" style="padding:0">
+                  <h4 style="margin-bottom:0;padding: 15px 25px;"><%-lang['Found Devices']%></h4>
                   <table class="output_data table table-striped" style="margin:0"></table>
               </div>
           </div>
