--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack-extra.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap-table.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap-slider.min.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/vendor/leaflet/leaflet.css">
 
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.misc.css">
@@ -206,6 +207,7 @@
 <script src="<%-window.libURL%>libs/js/lodash.min.js"></script>
 <script src="<%-window.libURL%>libs/js/gridstack.min.js"></script>
 <script src="<%-window.libURL%>libs/js/gridstack.jQueryUI.min.js"></script>
+<script src="<%-window.libURL%>libs/vendor/leaflet/leaflet.js"></script>
 <script src="<%-window.libURL%>libs/js/basic.js"></script>
 <script><% include ../libs/js/dash2.config.js %></script>
 <script src="<%-window.libURL%>libs/js/dash2.basic.js"></script>
