Show GPS data on Video Recordings (if they have it)

--- a/web/pages/blocks/videoview.ejs
+++ b/web/pages/blocks/videoview.ejs
@@ -66,7 +66,17 @@
         </button>
         <h4 class="modal-title" id="video_viewerLabel"><i class="fa fa-play-circle"></i> &nbsp; <span></span></h4>
       </div>
-      <div class="modal-body text-center"></div>
+      <div class="modal-body text-center">
+          <div class="row">
+              <div class="col-md-8 video-container">
+              </div>
+              <div class="col-md-4">
+                  <div id="video_viewer_gps_map">
+
+                  </div>
+              </div>
+          </div>
+      </div>
       <div class="modal-footer">
         <a class="btn btn-danger pull-left" video="delete" data-dismiss="modal"><%-lang.Delete%></a>
           <div class="btn-group">
