--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -217,6 +217,7 @@
 <script src="<%-window.libURL%>libs/js/dash2.elements.js"></script>
 <script src="<%-window.libURL%>libs/js/dash2.elementbuilder.js"></script>
 <script src="<%-window.libURL%>libs/js/dash2.init.js"></script>
+<script src="<%-window.libURL%>libs/js/dash2.gps.js"></script>
 <% customAutoLoad.LibsJs.forEach(function(lib){ %>
     <script src="<%-window.libURL%>libs/js/<%-lib%>"></script>
 <% }) %>
